--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<a href="#">TEST</a>
 	<a href="#">JAVA SCRIPT:</a>
-	<a href="#">TEXT........</a>
+	<a href="#">TEST........</a>
 	<script async src="js/main.min.js"></script>
 	
 </body>
